Fixed a problem with the screen overflowing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ a {
   text-decoration: none;
 }
 
+.app {
+  overflow-x: hidden;
+}
+
 /* Variables */
 
 :root {
